[metadata]
name = django-ptpython
version = attr: django-ptpython.__version__
author = Reganto
author_email = tell.reganto@gmail.com
description = Use PtPython as default Django Shell.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/reganto/django-ptpython
project_urls =
    Bug Tracker = https://github.com/reganto/django-ptpython/issues
license = Apache Software License (http://www.apache.org/licenses/LICENSE-2.0)
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.6
install_requires = 
    django >= 4.0
    ptpython >= 3.0

packages = find:
include_package_data = True
zip_safe = False
